--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,2 +1,19 @@
-$font-family: Roboto, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif, "Arial";
+$font-family-base: Roboto, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif, "Arial";
 $primary: #0065ce;
+
+$container-max-widths: (
+        sm: 540px,
+        md: 720px,
+        lg: 960px,
+        xl: 1140px,
+        xxl: 1320px
+);
+
+$grid-breakpoints: (
+        xs: 0,
+        sm: 576px,
+        md: 768px,
+        lg: 992px,
+        xl: 1200px,
+        xxl: 1400px
+);
