--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -40,4 +40,5 @@
 @import "../../node_modules/bootstrap/scss/_utilities";
 @import "../../node_modules/bootstrap/scss/_print";
 
+@import "default";
 @import "global";
